--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,18 @@ addons:
     packages:
       - doxygen
 
+before_script:
+  - gem install bashcov
+  - (git clone https://github.com/bats-core/bats-core.git && cd bats-core && ./install.sh ${HOME}/bats)
+
 script:
   - make test
+  - PATH=${HOME}/bats/bin:$PATH make coverage
   - make docs
 
 after_success:
   - source <(curl 'https://raw.githubusercontent.com/madworx/cd-ci-glue/master/src/cd-ci-glue.bash')
   - GHDIR=$(github_pages_prepare 'madworx/cd-ci-glue') || exit 1
-  - cp -a docs/html/* "${GHDIR}/"
+  - cp -a docs/html/*  "${GHDIR}/"
+  - cp -a src/coverage "${GHDIR}/coverage"
   - is_travis_master_push && github_doc_commit "${GHDIR}"
